src/Feature Assignment 2/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>IF( Total_Feedback_Count__c  &gt; 0, Total_Rating__c  /  Total_Feedback_Count__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback</label>
        <referenceTo>Feedback__c</referenceTo>
        <relationshipLabel>Training Sessions</relationshipLabel>
        <relationshipName>Training_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Attendee__c</fullName>
        <label>No. of Attendee</label>
        <summaryForeignKey>Attendee__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_Description__c</fullName>
        <label>Session Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Hands-on</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Feedback_Count__c</fullName>
        <label>Total Feedback Count</label>
        <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <label>Total Rating</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <description>Training Session Related to Webinar</description>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <description>Training Session Related to Workshop</description>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Session_Date_In_Future</fullName>
        <active>true</active>
        <description>Session Date should be in future</description>
        <errorConditionFormula>Session_Date__c  &lt;= Today()</errorConditionFormula>
        <errorDisplayField>Session_Date__c</errorDisplayField>
        <errorMessage>Session Date Must be in Future</errorMessage>
    </validationRules>
</CustomObject>